      This gives better integration with user settings such as ProxyCommand.
      (James Henstridge)

    * Sftp paths can now be relative, or local, according to the IETF draft spec.
      Paths now take the form:
      sftp://user:pass@host:port/relative/path
      or
      sftp://user:pass@host:port/%2Fabsolute/path
      or
      sftp://user:pass@host:port//absolute/path

    * Man Page now gives full help (James Blackwell). Help also updated to 
      reflect user config now being stored in .bazaar (Hans Ulrich
      Niedermann)


  IMPROVEMENTS:

    * "bzr INIT dir" now initializes the specified directory, and creates 
      it if it does not exist.  (John Arbash Meinel)

    * New remerge command (Aaron Bentley)

    * Better zsh completion script.  (Steve Borho)

    * 'bzr diff' now returns 1 when there are changes in the working 
      tree. (Robert Collins)

    * 'bzr push' now exists and can push changes to a remote location. 
      This uses the transport infrastructure, and can store the remote
      location in the ~/.bazaar/branches.conf configuration file.
      (Robert Collins)

    * Test directories are only kept if the test fails and the user requests
      that they be kept.

    * Tweaks to short log printing

    * Added branch nicks, new nick command, printing them in log output. 
      (Aaron Bentley)

    * If $BZR_PDB is set, pop into the debugger when an uncaught exception 
      occurs.  (Martin Pool)

    * Accept 'bzr resolved' (an alias for 'bzr resolve'), as this is
      the same as Subversion.  (Martin Pool)

    * New ftp transport support (on ftplib), for ftp:// and aftp:// 
      URLs.  (Daniel Silverstone)

    * Commit editor temporary files now start with 'bzr_log.', to allow 
      text editors to match the file name and set up appropriate modes or 
      settings.  (Magnus Therning)

    * Improved performance when integrating changes from a remote weave.  
      (Goffredo Baroncelli)
