@@ -35,6 +35,11 @@ UNRELEASED CHANGES
       or
       sftp://user:pass@host:port//absolute/path
 
+    * The bzr_man.py file has been removed. To create the man page now,
+      use bzr-infogen.py. The new program can also create other files.
+      Run "bzr-infogen.py --help" for usage information. (Hans Ulrich
+      Niedermann)
+
     * Man Page now gives full help (James Blackwell). Help also updated to 
       reflect user config now being stored in .bazaar (Hans Ulrich
       Niedermann)
